--- a/unit-2/css/style.css
+++ b/unit-2/css/style.css
@@ -1,25 +1,31 @@
 #map{
     height: 500px;
     box-shadow: 10px 10px 10px lightgray;
-    width: 500px;
     display:block;
     margin:auto;
 }
 
 #mycontent{
-    margin-bottom: 10px;
+    width: auto;
+    padding: 5px;
+    border-radius: 1%;
     text-align: center;
-    font-family: 'Lato';
+    background-color: #636363;
+    color: #f0f0f0;
+    margin: 0 auto;
+    margin-bottom: 9px;
+    font-family: Georgia;
     font-size: 20px;
+    box-shadow: 3px 3px 3px lightgray;
 }
 
 #credits{
     margin-top: 9px;
     font-family: 'Lato';
-    color: lightgray;
+    color: #bdbdbd6b;
     text-align: center;
 }
 
 body {
-    background-color: lightgoldenrodyellow;
+    background-color: #f0f0f0;
   }
