Activity 6 - update main.js

--- a/unit-2/css/style.css
+++ b/unit-2/css/style.css
@@ -4,17 +4,39 @@
 
 #map {    
     height: 500px;    
-    width: 80%;
+    width: 75%;
     display: inline-block;
     }
+    #panel {  
+        width: 20%;  
+        padding: 10px;  
+        display: inline-block;  
+        vertical-align: top;  
+        text-align: center;  
+        line-height: 42px;  
+    }  
+    
+.range-slider {  
+    width: 55%;
+}  
+    
+.step {  
+    width: 20%;
+}  
+    
+.step img {  
+    width: 100%; 
+}
 
-    #panel {    
-        width: 15%;    
-        padding: 10px;
-        display: inline-block;
-        vertical-align: top;
-        text-align: center;
-        line-height: 42px;
+
+
+/* icons */
+#forward {
+    float: right;
+    }
+
+#reverse {  
+    float: left;  
     }
 
 #mycontent{
