--- a/unit-2/css/style.css
+++ b/unit-2/css/style.css
@@ -5,7 +5,7 @@
 #map {    
     height: 500px;    
     width: 100%;
-    display: inline-block;
+    /*display: inline-block;*/
 }
 
 /*
@@ -28,6 +28,18 @@
     border: solid gray 1px;  
     box-shadow: 3px 3px 3px lightgray
 } 
+
+.legend-control-container {  
+    width: 150px; 
+    height: 200px; 
+    font-weight: bold;
+    background-color: rgba(255,255,255,0.8);  
+    padding: 5px;  
+    line-height: 45px;  
+    text-align: center;  
+    border: solid gray 1px;  
+    box-shadow: 3px 3px 3px lightgray
+}
     
 /* Add some basic styles to the range slider */
 .range-slider {
@@ -60,6 +72,13 @@
     float: left;  
     }
 
+#credits{
+    margin-top: 9px;
+    font-family: 'Lato';
+    color: #bdbdbd6b;
+    text-align: center;
+}
+
 #mycontent{
     width: auto;
     padding: 5px;
@@ -72,13 +91,6 @@
     font-family: Georgia;
     font-size: 20px;
     box-shadow: 3px 3px 3px lightgray;
-}
-
-#credits{
-    margin-top: 9px;
-    font-family: 'Lato';
-    color: #bdbdbd6b;
-    text-align: center;
 }
 
 body {
