Update font faces - Town 70
Tried to add font faces | Unfortunately the fonts did not work

--- a/unit-2/css/style.css
+++ b/unit-2/css/style.css
@@ -2,6 +2,11 @@
     margin: 0.2em, 0;
 }
 
+@font-face {
+    font-family: 'Town70';
+    src: url(assets\town-70-accent-bold-1.ttf);
+}
+
 #map {    
     height: 500px;    
     width: 100%;
