--- a/unit-2/css/style.css
+++ b/unit-2/css/style.css
@@ -107,7 +107,7 @@ body {
 /* CSS style for mobile */
 @media only screen and (max-width: 600px) {
     #map {
-      height: 90vh
+      height: auto
     }
   
     .sequence-control-container {
