--- a/unit-2/css/style.css
+++ b/unit-2/css/style.css
@@ -86,7 +86,11 @@
     margin-bottom: 0px;
 }
 
-#mycontent{
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+
+#title{
     width: auto;
     padding: 5px;
     border-radius: 1%;
@@ -95,9 +99,17 @@
     color: #f0f0f0;
     margin: 0 auto;
     margin-bottom: 9px;
-    font-family: Georgia;
+    font-family: Georgia, serif;
     font-size: 20px;
     box-shadow: 3px 3px 3px rgb(168, 168, 168);
+}
+
+#mapcontent{
+    margin-top: 3px;
+    margin-bottom: 6px;
+    font-size: 14px;
+    font-family: Helvetica, sans-serif;
+    color: #5452526b;
 }
 
 body {
@@ -107,8 +119,7 @@ body {
 /* CSS style for mobile */
 @media only screen and (max-width: 600px) {
     #map {
-      height: 500px;
-      width: 100%;
+      height: 90vh;
     }
   
     .sequence-control-container {
