--- a/unit-2/css/style.css
+++ b/unit-2/css/style.css
@@ -117,9 +117,9 @@ body {
   }
 
 /* CSS style for mobile */
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 764px) {
     #map {
-      height: 90vh;
+      height: 500px;
     }
   
     .sequence-control-container {
