--- a/unit-2/css/style.css
+++ b/unit-2/css/style.css
@@ -119,9 +119,14 @@ body {
 /* CSS style for mobile */
 @media only screen and (max-width: 764px) {
     #map {
-      height: 300px;
+      height: 400px;
     }
-  
+
+    .range-slider {
+        width: 100px;
+        height: 3px;
+    }
+
     .sequence-control-container {
       width: 80%;
     }
