--- a/unit-2/css/style.css
+++ b/unit-2/css/style.css
@@ -109,7 +109,7 @@
     margin-bottom: 6px;
     font-size: 14px;
     font-family: Helvetica, sans-serif;
-    color: #5452526b;
+    color: #636363;
 }
 
 body {
