Text layer control button
Updated CSS, Js using W3 schools based approach of read less and read more

--- a/unit-2/css/style.css
+++ b/unit-2/css/style.css
@@ -112,6 +112,18 @@
     color: #636363;
 }
 
+#more {
+    display: none;
+}
+
+#myBtn{
+    font-size: 14px;
+    font-family: Helvetica, sans-serif;
+    background-color: rgba(216, 220, 220, 0.5);  
+    border: solid gray 1px;
+    box-shadow: 3px 3px 3px rgba(120, 120, 120, 0.568)
+}
+
 body {
     background-color: #f0f0f0;
   }
