Added d3.projection(), d3.geoPath()
Create a path generator and use it to draw your background geometry and enumeration units in the browser. Style your background geometry in style.css.

--- a/unit-3/css/style.css
+++ b/unit-3/css/style.css
@@ -13,6 +13,12 @@
     shape-rendering: crispEdges;
 }
 
+.map {
+    fill: #E3DA93;
+    stroke: #747474;
+    stroke-width: 1px;
+}
+
 .axis text {
     font-family: sans-serif;
     font-size: 0.9em;
