Activity 9: Wisconsin Map Submission

--- a/unit-3/css/style.css
+++ b/unit-3/css/style.css
@@ -17,8 +17,8 @@
     fill: #E3DA93;
     stroke: #747474;
     stroke-width: 1px;
-    stroke-dasharray: 2,2;
-    border: medium solid #999;
+    /*stroke-dasharray: 2,2;*/
+    border: medium solid #8e8e8e;
 }
 
 /*
