Activity 10: Chart addition
Add an SVG container for your data visualization and adjust your map container size so that both fit neatly on the web page for a wide range of browser window sizes.

--- a/unit-3/css/style.css
+++ b/unit-3/css/style.css
@@ -10,10 +10,19 @@
 
 .map {
     fill: #E3DA93;
-    stroke: #323232;
+    stroke: #000;
     stroke-width: 0.5px;
+    stroke-linecap: round;
     /* stroke-dasharray: 2,2; */
     border: medium solid #8e8e8e;
+    margin: 10px 0 0 20px;
+}
+
+.chart {
+    background-color: rgba(128,128,128,.2);
+    border: medium solid #999;
+    float: right;
+    margin: 10px 20px 0 0;
 }
 
 .gratLines {
