--- a/unit-3/css/style.css
+++ b/unit-3/css/style.css
@@ -1,13 +1,5 @@
 /* Activity 10: CSS style for D3 Map*/
 
-.axis path,
-.axis line {
-    fill: none;
-    stroke: black;
-    stroke-width: 1px;
-    shape-rendering: crispEdges;
-}
-
 .map {
     fill: #E3DA93;
     stroke: #000;
@@ -16,13 +8,6 @@
     /* stroke-dasharray: 2,2; */
     border: medium solid #8e8e8e;
     margin: 10px 0 0 20px;
-}
-
-.chart {
-    background-color: rgba(128,128,128,.2);
-    border: medium solid #999;
-    float: right;
-    margin: 10px 20px 0 0;
 }
 
 .gratLines {
@@ -35,7 +20,40 @@
     fill: #D5E3FF;
 }
 
+/* Chart style */
+
+.chart {
+    float: right;
+    margin: 7px 20px 0 0;
+}
+
+.chartTitle {
+    font-family: sans-serif;
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+.chartBackground {
+    fill: rgba(128,128,128,.2);
+}
+
+.chartFrame {
+    fill: none;
+    stroke: #999;
+    stroke-width: 3px;
+    shape-rendering: crispEdges;
+}
+
+.axis path,
+.axis line {
+    fill: none;
+    stroke: #999;
+    stroke-width: 1px;
+    shape-rendering: crispEdges;
+}
+
 .axis text {
     font-family: sans-serif;
-    font-size: 0.9em;
+    font-size: 0.8em;
+    fill: #999;
 }
