--- a/unit-3/css/style.css
+++ b/unit-3/css/style.css
@@ -28,9 +28,9 @@
 }
 
 .chartTitle {
-    font-family: sans-serif;
-    font-size: 1.5em;
-    font-weight: bold;
+    font-family: Lato,sans-serif;
+    font-size: 20px;
+    font-weight: normal;
 }
 
 .chartBackground {
