--- a/unit-3/css/style.css
+++ b/unit-3/css/style.css
@@ -28,8 +28,8 @@
 }
 
 .chartTitle {
-    font-family: Lato,sans-serif;
-    font-size: 20px;
+    font-family: Verdana, sans-serif;
+    font-size: 18px;
     font-weight: normal;
 }
 
