--- a/unit-3/css/style.css
+++ b/unit-3/css/style.css
@@ -1,4 +1,4 @@
-/* Activity 10: CSS style for D3 Map*/
+/* Activity 11: CSS style for D3 Map*/
 
 .map {
     fill: #E3DA93;
@@ -56,4 +56,22 @@
     font-family: sans-serif;
     font-size: 0.8em;
     fill: #999;
+}
+
+/* dropdown */
+.dropdown {
+    position: absolute;
+    top: 30px;
+    left: 40px;
+    z-index: 10;
+    font-family: sans-serif;
+    font-size: 1em;
+    font-weight: bold;
+    padding: 2px;
+    border: 1px solid #999;
+    box-shadow: 2px 2px 4px #999;
+}
+
+option {
+    font-weight: normal;
 }
