Style.css Graph heading

--- a/unit-3/css/style.css
+++ b/unit-3/css/style.css
@@ -28,9 +28,9 @@
 }
 
 .chartTitle {
-    font-family: Verdana, sans-serif;
+    font-family: sans-serif;
     font-size: 16px;
-    font-weight: normal;
+    font-weight: bold;
 }
 
 .chartBackground {
@@ -59,6 +59,7 @@
 }
 
 /* dropdown */
+
 .dropdown {
     position: absolute;
     top: 30px;
