--- a/unit-3/css/style.css
+++ b/unit-3/css/style.css
@@ -1,5 +1,4 @@
 /* Activity 11: CSS style for D3 Map*/
-
 .map {
     fill: #E3DA93;
     stroke: #000;
@@ -8,6 +7,21 @@
     /* stroke-dasharray: 2,2; */
     border: medium solid #8e8e8e;
     margin: 10px 0 0 20px;
+}
+
+#maptitle {
+    background-color: #2c7fb8;
+    width: auto;
+    height: 20px;
+    /* border: 2px solid rgb(153, 153, 153); */
+    padding: 10px;
+    margin: auto;
+    text-align: center;
+    font-family: sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    color:#ffffff;
+    box-shadow: 2px 2px 4px #7d7d7d;
 }
 
 .gratLines {
@@ -59,11 +73,10 @@
 }
 
 /* dropdown */
-
 .dropdown {
     position: absolute;
-    top: 30px;
-    left: 40px;
+    /* top: 30px;
+    left: 40px; */
     z-index: 10;
     font-family: sans-serif;
     font-size: 1em;
@@ -75,4 +88,23 @@
 
 option {
     font-weight: normal;
+}
+
+/* Label design */
+.infolabel {    
+    margin: 0 20px 0 0;    
+    position: absolute;
+    height: 50px;
+    min-width: 100px;
+    color: #fff;
+    background-color: #000;
+    border: solid thin #fff;
+    padding: 5px 10px;
+    top: -75px;
+}
+.infolabel h1 {
+    margin: 0 20px 0 0;
+    padding: 0;
+    display: inline-block;
+    line-height: 1em;
 }
