--- a/unit-3/css/style.css
+++ b/unit-3/css/style.css
@@ -1,27 +1,53 @@
 /* Activity 11: CSS style for D3 Map*/
+
 .map {
     fill: #E3DA93;
-    stroke: #000;
+    stroke: #464545;
     stroke-width: 0.5px;
     stroke-linecap: round;
     /* stroke-dasharray: 2,2; */
     border: medium solid #8e8e8e;
     margin: 10px 0 0 20px;
 }
-
-#maptitle {
-    background-color: #2c7fb8;
+  
+.mapTitle {
+    background-color: #538a64;
     width: auto;
     height: 20px;
     /* border: 2px solid rgb(153, 153, 153); */
     padding: 10px;
-    margin: auto;
+    margin-left: 20px;
+    margin-right: 20px;
     text-align: center;
-    font-family: sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-size: 20px;
     font-weight: bold;
-    color:#ffffff;
-    box-shadow: 2px 2px 4px #7d7d7d;
+    color:#e3f0de;
+    box-shadow: 4px 4px 4px 2px #a7a7a7;
+}
+
+.mapDesc{
+    margin-left: 20px;
+    margin-right: 20px;
+    max-width: auto;
+    text-align: auto;
+    position: absolute;
+    top: calc(100% - 20px); /* adjust the top value as needed */
+    width: auto;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1em;
+    color:#8e8e8e;
+}
+
+.credits{
+    position: absolute;
+    top: calc(100% + 250px); /* adjust the top value as needed */
+    left: 0;
+    width: 100%;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1em;
+    color:lightgray;
+    text-align: center;
 }
 
 .gratLines {
@@ -42,13 +68,14 @@
 }
 
 .chartTitle {
-    font-family: sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-size: 16px;
     font-weight: bold;
+    color: #464545;
 }
 
 .chartBackground {
-    fill: rgba(128,128,128,.2);
+    fill: #fff;
 }
 
 .chartFrame {
@@ -67,7 +94,7 @@
 }
 
 .axis text {
-    font-family: sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-size: 0.8em;
     fill: #999;
 }
@@ -75,15 +102,17 @@
 /* dropdown */
 .dropdown {
     position: absolute;
+    background-color: #e3f0de;
     /* top: 30px;
     left: 40px; */
     z-index: 10;
-    font-family: sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-size: 1em;
     font-weight: bold;
     padding: 2px;
     border: 1px solid #999;
     box-shadow: 2px 2px 4px #999;
+    color: #464545;
 }
 
 option {
@@ -91,20 +120,29 @@ option {
 }
 
 /* Label design */
+
 .infolabel {    
-    margin: 0 20px 0 0;    
+    margin: 0 20px 0 0; 
+    z-index: 11;   
     position: absolute;
-    height: 50px;
-    min-width: 100px;
-    color: #fff;
-    background-color: #000;
-    border: solid thin #fff;
+    height: auto;
+    min-width: auto;
+    color: #464545;
+    background-color: #e3f0deea;
+    border: solid thin #464545;
     padding: 5px 10px;
-    top: -75px;
+    top: -100px;
+    font-family: 'Open Sans', sans-serif;
 }
 .infolabel h1 {
     margin: 0 20px 0 0;
     padding: 0;
     display: inline-block;
     line-height: 1em;
+    font-family: 'Open Sans', sans-serif;
+}
+.legend{
+    position:absolute;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1em;
 }
