--- a/unit-3/css/style.css
+++ b/unit-3/css/style.css
@@ -14,7 +14,7 @@
     background-color: #538a64;
     width: auto;
     height: 20px;
-    /* border: 2px solid rgb(153, 153, 153); */
+   /* border: 1px solid #464545;*/
     padding: 10px;
     margin-left: 20px;
     margin-right: 20px;
@@ -23,7 +23,7 @@
     font-size: 20px;
     font-weight: bold;
     color:#e3f0de;
-    box-shadow: 4px 4px 4px 2px #a7a7a7;
+    box-shadow: 2px 2px 5px 2px #8e8e8e;
 }
 
 .mapDesc{
@@ -32,21 +32,21 @@
     max-width: auto;
     text-align: auto;
     position: absolute;
-    top: calc(100% - 40px); /* adjust the top value as needed */
+    top: calc(100% - 50px); /* adjust the top value as needed */
     width: auto;
     font-family: 'Open Sans', sans-serif;
     font-size: 1em;
-    color:#8e8e8e;
+    color:#91a28a;
 }
 
 .credits{
     position: absolute;
-    top: calc(100% + 250px); /* adjust the top value as needed */
+    top: calc(100% + 230px); /* adjust the top value as needed */
     left: 0;
     width: 100%;
     font-family: 'Open Sans', sans-serif;
     font-size: 1em;
-    color:lightgray;
+    color:#91a28a;
     text-align: center;
 }
 
@@ -75,7 +75,7 @@
 }
 
 .chartBackground {
-    fill: #fff;
+    fill: #ffffff00;
 }
 
 .chartFrame {
@@ -119,7 +119,7 @@ option {
     font-weight: normal;
 }
 
-/* Label design */
+/* Dynamic label design */
 
 .infolabel {    
     margin: 0 20px 0 0; 
@@ -134,6 +134,7 @@ option {
     top: -100px;
     font-family: 'Open Sans', sans-serif;
 }
+
 .infolabel h1 {
     margin: 0 20px 0 0;
     padding: 0;
@@ -141,8 +142,16 @@ option {
     line-height: 1em;
     font-family: 'Open Sans', sans-serif;
 }
+
+/* color legend */
 .legend{
     position:absolute;
     font-family: 'Open Sans', sans-serif;
-    font-size: 1em;
+    font-size: 0.9em;
+    font-weight: normal;
+    color:#8e8e8e;
+}
+
+body {
+    background-color: #f9fdf8ea;
 }
