--- a/unit-3/css/style.css
+++ b/unit-3/css/style.css
@@ -1,4 +1,4 @@
-/* Activity 11: CSS style for D3 Map*/
+/*CSS style for D3 Map*/
 
 .map {
     fill: #E3DA93;
@@ -26,6 +26,32 @@
     box-shadow: 2px 2px 5px 2px #8e8e8e;
 }
 
+.reset-button {
+    background-color: #e3f0de;
+    color: #006837cf;
+    stroke: #fff;
+    stroke-width: 5px;
+    padding: 3px 6px;
+    font-size: 15px;
+    cursor: pointer;
+    float: left;
+    margin-top: -4px;
+    border-radius: 4px;
+    border: 1px solid #fff;
+    font-weight: bold;
+    font-family: 'Open Sans', sans-serif;
+    /*display: flex;*/
+}
+
+.reset-button:hover {
+    background-color: #fff;
+    color: #538a64;
+    border: 1px solid #e7e7e7;
+    box-shadow: 2px 2px 4px #999;
+    font-weight: bold;
+    box-shadow: 2px 2px 5px 2px #e7e7e7;
+}
+
 /* hyperlinks style*/
 a:-webkit-any-link {
     color: #538a64;
@@ -39,7 +65,7 @@ a:-webkit-any-link {
     max-width: auto;
     text-align: auto;
     position: absolute;
-    bottom: -250px;
+    bottom: -200px;
     width: auto;
     font-family: 'Open Sans', sans-serif;
     font-size: 1em;
@@ -48,13 +74,46 @@ a:-webkit-any-link {
 
 .credits{
     position: absolute;
-    bottom: -300px;
+    bottom: -250px;
     left: 0;
     width: 100%;
     font-family: 'Open Sans', sans-serif;
     font-size: 1em;
     color:#91a28aa0;
     text-align: center;
+}
+
+.popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #e3f0deea;
+    color: #636363;
+    border: 2px solid #999;
+    padding: 20px;
+    max-width: 700px;
+    width: 80%;
+    text-align: center;
+    box-shadow: 0px 0px 10px rgba(97, 97, 97, 0.3);
+    font-family: 'Open Sans', sans-serif;
+    z-index: 11;
+}
+
+.popup button {
+    padding: 10px 20px;
+    background-color: #31a354;
+    border: 1px solid #999;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+  
+.popup button:hover {
+    background-color: #fff;
+    color: #31a354;
+    box-shadow: 2px 2px 4px #999;
 }
 
 .gratLines {
@@ -110,8 +169,6 @@ a:-webkit-any-link {
 .dropdown {
     position: absolute;
     background-color: #e3f0de;
-    /* top: 30px;
-    left: 40px; */
     z-index: 10;
     font-family: 'Open Sans', sans-serif;
     font-size: 1em;
